--- a/client/src/admin/AdminOrders/AdminOrders.scss
+++ b/client/src/admin/AdminOrders/AdminOrders.scss
@@ -1,8 +1,5 @@
-@import '../../styles/variables.scss';
-
 .admin-orders{
-  display: flex;
-  flex-direction: column;
+  @include column-direction;
 
   &-headers, &-item{
     display: grid;
