--- a/client/src/admin/AdminHeader/AdminHeader.scss
+++ b/client/src/admin/AdminHeader/AdminHeader.scss
@@ -1,14 +1,10 @@
-@import '../../styles/variables.scss';
-
 .admin-header{
-  display: flex;
+  @include flex-align(center, space-between);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   padding: 25px 60px;
-  align-items: center;
-  justify-content: space-between;
   background-color: white;
   z-index: 10;
 
