--- a/client/src/components/AuthModal/AuthForm/AuthForm.scss
+++ b/client/src/components/AuthModal/AuthForm/AuthForm.scss
@@ -1,13 +1,10 @@
-@import '../../../styles/variables.scss';
-
 .auth-form-body{
 
   &-label{
+    @include column-direction;
     font-size: 16px;
     color: $dark-brown;
     font-weight: bold;
-    display: flex;
-    flex-direction: column;
     gap: 8px;
     padding-bottom: 15px;
     position: relative;
@@ -27,11 +24,9 @@
   }
 
   &-error{
-    position: absolute;
+    @include absolute-position(bottom 3px, left 0);
     font-size: 10px;
     color: red;
-    bottom: 3px;
-    left: 0;
   }
 }
 
