--- a/client/src/components/Burgermenu/BurgerMenu.scss
+++ b/client/src/components/Burgermenu/BurgerMenu.scss
@@ -1,9 +1,5 @@
-@import '../../styles/variables.scss';
-
 .burgerMenu{
-  position: absolute;
-  top: 0;
-  left: 0;
+  @include absolute-position(top 0, left 0);
   height: 100%;
   max-width: 400px;
   width: 100%;
@@ -11,16 +7,13 @@
   overflow-y: auto;
 
   &-header{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    @include flex-align(center, flex-end);
     height: 55px;
     padding: 0 13px;
   }
 
   &-body{
-    display: flex;
-    flex-direction: column;
+    @include column-direction;
     margin-bottom: 30px;
   }
 
@@ -31,8 +24,7 @@
   }
 
   &-tabs{
-    display: flex;
-    flex-direction: column;
+    @include column-direction;
     background-color: rgba(187, 138, 82, 0.4);
 
     div{
