--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -1,30 +1,22 @@
-@import '../../styles/variables';
-
 .cart{
-  display: flex;
-  flex-direction: column;
+  @include column-direction;
   height: 100%;
   padding: 20px;
   gap: 25px;
 
   &-wrapper{
+    @include column-direction;
+    @include absolute-position(top 0, right 0);
     padding-top: 20px;
-    display: flex;
-    flex-direction: column;
     background-color: white;
     width: 100%;
     max-width: 400px;
     height: 100%;
-    top: 0;
-    right: 0;
-    position: absolute;
     padding-bottom: 30px;
   }
 
   &-header{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    @include flex-align(center, flex-end);
     padding: 0 20px;
     font-size: 28px;
     color: $dark-green;
@@ -45,8 +37,7 @@
   }
 
   &-body{
-    display: flex;
-    flex-direction: column;
+    @include column-direction;
     gap: 10px;
     min-height: 200px;
     flex: 1;
@@ -62,16 +53,13 @@
   }
 
   &-bottom{
-    display: flex;
-    flex-direction: column;
+    @include column-direction;
     gap: 25px;
     justify-self: flex-end;
   }
 
   &-sum{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include flex-align(center, space-between);
     width: 100%;
     padding-top: 10px;
 
