--- a/client/src/components/Cart/CartItem/CartItem.scss
+++ b/client/src/components/Cart/CartItem/CartItem.scss
@@ -1,9 +1,6 @@
-@import '../../../styles/variables';
-
 .cart{
   &-item{
-    display: flex;
-    flex-direction: column;
+    @include column-direction;
     width: 100%;
     gap: 5px;
     padding-bottom: 5px;
@@ -13,9 +10,7 @@
     }
 
     &-top{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      @include flex-align(center, space-between);
       font-size: 16px;
     }
 
@@ -24,15 +19,11 @@
     }
 
     &-bottom{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      @include flex-align(center, space-between);
     }
 
     &-btn{
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      @include flex-align(center, center);
       height: 25px;
       width: 25px;
       color: $light-green;
