--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,5 +1,3 @@
-@import '../../styles/variables.scss';
-
 .header{
   width: 100%;
   position: fixed;
@@ -14,18 +12,14 @@
   }
 
   &-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    @include flex-align(center, space-between);
     height: 100%;
     width: 100%;
     align-self: center;
   }
 
   &-burgermenu{
-    display: flex;
-    align-items: center;
+    @include flex-align(center);
     width: 30px;
     height: 25px;
     cursor: pointer;
@@ -40,16 +34,12 @@
 
     &::before{
       content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
+      @include absolute-position(top 0, left 0);
     }
 
     &::after{
       content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
+      @include absolute-position(bottom 0, left 0);
     }
   }
 
@@ -60,17 +50,13 @@
   }
 
   &-bottom{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex-align(center, center);
     min-height: 45px;
     width: 100%;
     background-color: $light-gray;
 
     .header-bottom-container{
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      @include flex-align(center, center);
       min-height: 100%;
       width: 100%;
     }
