--- a/client/src/pages/CheckoutPage/CheckoutOrder/PromoCode/PromoCode.scss
+++ b/client/src/pages/CheckoutPage/CheckoutOrder/PromoCode/PromoCode.scss
@@ -1,5 +1,3 @@
-@import '../../../../styles/variables.scss';
-
 .promocode{
 
   &-input-container{
@@ -23,9 +21,7 @@
     padding-left: 5px;
 
     &-error{
-      position: absolute;
-      left: 0;
-      bottom: -12px;
+      @include absolute-position(bottom -12px, left 0);
       font-size: 10px;
       color: red;
     }
@@ -43,8 +39,6 @@
   }
 
   &-discount-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    @include flex-align(center, space-between);
   }
 }
