--- a/client/src/pages/CheckoutPage/CheckoutPage.scss
+++ b/client/src/pages/CheckoutPage/CheckoutPage.scss
@@ -1,5 +1,3 @@
-@import "../../styles/variables.scss";
-
 .checkout {
   padding: 50px 0;
 
@@ -10,8 +8,7 @@
   }
 
   &-info {
-    display: flex;
-    flex-direction: column;
+    @include column-direction;
     gap: 30px;
   }
 
@@ -26,8 +23,7 @@
   }
 
   &-order-receipt {
-    display: flex;
-    flex-direction: column;
+    @include column-direction;
     gap: 40px;
   }
 }
