--- a/client/src/pages/CheckoutPage/CustomerInfo/CustomerInfo.scss
+++ b/client/src/pages/CheckoutPage/CustomerInfo/CustomerInfo.scss
@@ -1,8 +1,5 @@
-@import '../../../styles/variables.scss';
-
 .customer-info{
-  display: flex;
-  flex-direction: column;
+  @include column-direction;
   gap: 20px;
   width: 100%;
 
@@ -13,15 +10,13 @@
   }
 
   &-column{
-    display: flex;
-    flex-direction: column;
+    @include column-direction;
     gap: 20px;
     width: calc(50% - 10px);
   }
 
   &-label{
-    display: flex;
-    flex-direction: column;
+    @include column-direction;
     font-weight: bold;
     font-size: 18px;
     gap: 8px;
@@ -44,9 +39,7 @@
   }
 
   &-error{
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    @include absolute-position(bottom 0, left 0);
     font-size: 12px;
     color: red;
   }
