--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -1,8 +1,5 @@
-@import '../../styles/variables.scss';
-
 .achievements{
-  display: flex;
-  justify-content: space-around;
+  @include flex-align(normal, space-around);
   flex-wrap: wrap;
   margin-top: 60px;
   width: 100%;
@@ -11,9 +8,7 @@
   border-radius: 20px;
 
   &-item{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include flex-align(center, normal, column);
     width: 25%;
     gap: 10px;
 
