--- a/client/src/pages/HomePage/Restaurants/Restaurants.scss
+++ b/client/src/pages/HomePage/Restaurants/Restaurants.scss
@@ -1,11 +1,7 @@
-@import '../../../styles/variables.scss';
-
 .restaurants {
   &-title {
-    display: flex;
+    @include flex-align(center, flex-start);
     gap: 10px;
-    justify-content: flex-start;
-    align-items: center;
     text-align: center;
     color: black;
     font-size: 24px;
@@ -28,9 +24,7 @@
     }
 
     button{
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      @include flex-align(center, center);
       gap: 10px;
       background-color: transparent;
       font-size: 20px;
