--- a/client/src/pages/NotFound/NotFound.scss
+++ b/client/src/pages/NotFound/NotFound.scss
@@ -1,14 +1,9 @@
-@import '../../styles/variables.scss';
-
 .notfound {
   display: flex;
   height: calc(100% - 160px);
 
   &-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @include flex-align(center, center, column);
     gap: 30px;
   }
 
