--- a/client/src/pages/OrderHistory/OrderProgress/OrderProgress.scss
+++ b/client/src/pages/OrderHistory/OrderProgress/OrderProgress.scss
@@ -1,5 +1,3 @@
-@import '../../../styles/variables.scss';
-
 @keyframes moveBackground {
   0% {
     background-position: 0 50%;
@@ -13,9 +11,7 @@
 }
 
 .progress{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex-align(center, normal, column);
   height: 100%;
   width: 100%;
 
