--- a/client/src/pages/RestaurantPage/Categories/Categories.scss
+++ b/client/src/pages/RestaurantPage/Categories/Categories.scss
@@ -1,5 +1,3 @@
-@import '../../../styles/variables.scss';
-
 .category{
   width: 100%;
   position: sticky;
@@ -17,8 +15,7 @@
   }
 
   &-list{
-    display: flex;
-    flex-direction: column;
+    @include column-direction;
   }
 
   &-list-item{
@@ -45,14 +42,12 @@
     z-index: 5;
 
     &::after{
+      @include absolute-position(bottom 0, left 0);
       content: '';
       width: 100%;
       height: 7px;
       background-color: $yellow;
       border-radius: 10px;
-      position: absolute;
-      bottom: 0;
-      left: 0;
       z-index: -1;
     }
   }
