--- a/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
+++ b/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
@@ -1,5 +1,3 @@
-@import '../../../styles/variables.scss';
-
 .food-card {
   height: 190px;
   border: 1px solid $light-gray;
@@ -7,9 +5,7 @@
   padding: 15px;
 
   &-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    @include flex-align(normal, space-between, column);
     height: 100%;
     gap: 15px;
   }
@@ -30,8 +26,7 @@
   }
 
   &-details {
-    display: flex;
-    flex-direction: column;
+    @include column-direction;
     gap: 10px;
   }
 
@@ -47,9 +42,7 @@
   }
 
   &-bottom {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include flex-align(center, space-between);
     position: relative;
   }
 
@@ -59,9 +52,7 @@
   }
 
   &-buy,  &-buy-unavailable{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex-align(center, center);
     height: 35px;
     width: 35px;
     font-weight: bold;
@@ -77,12 +68,10 @@
     background-color: rgba(175, 216, 200, 0.7);
 
     &:hover:before{
+      @include absolute-position(top -10px, right 0);
       content: 'Add to cart';
-      position: absolute;
       font-size: 12px;
       color: $dark-green;
-      top: -10px;
-      right: 0;
     }
   }
 
