--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,4 +1,5 @@
-@import './styles/variables.scss';
+@import 'variables';
+@import "mixins";
 
 :root {
     width: 100%;
@@ -65,8 +66,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #root {
     height: 100vh;
-    display: flex;
-    flex-direction: column;
+    @include column-direction;
     min-height: 100vh;
 }
 
@@ -99,8 +99,7 @@ h1, h2, h3, h4, h5, h6 {
     background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     z-index: 1400;
-    display: flex;
-    align-items: center;
+    @include flex-align(center);
 }
 
 .cross{
@@ -111,10 +110,8 @@ h1, h2, h3, h4, h5, h6 {
     cursor: pointer;
 
     &::before, &::after{
+        @include absolute-position(top 50%, left 50%);
         content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
         width: 20px;
         height: 1px;
         background-color: black;
