implemented pagination on admin orders page

--- a/client/src/admin/AdminLayout/AdminLayout.scss
+++ b/client/src/admin/AdminLayout/AdminLayout.scss
@@ -10,7 +10,7 @@
   &-main{
     margin: 120px 60px 80px 360px;
     width: calc(100% - 420px);
-    min-height: calc(100% - 200px);
+    height: calc(100% - 200px);
     border-radius: 15px;
     background-color: white;
     padding: 25px;
