--- a/client/src/pages/OrderHistory/OrderHistory.scss
+++ b/client/src/pages/OrderHistory/OrderHistory.scss
@@ -1,5 +1,7 @@
 .order-history{
-  padding: 50px 0;
+  padding: 60px 0;
+  position: relative;
+  margin-bottom: 50px;
 
   &-header{
     @include flex-align(center, space-between);
