--- a/client/src/pages/OrderHistory/Order/Order.scss
+++ b/client/src/pages/OrderHistory/Order/Order.scss
@@ -26,9 +26,16 @@
 
   &-logo{
     @include absolute-position(top -45px, left 0);
-    width: 80px;
-    height: 80px;
-    object-fit: cover;
+    border: 1px solid $dark-green;
+    border-radius: 50%;
+    padding: 8px;
+    background-color: white;
+
+    img{
+      width: 70px;
+      height: 70px;
+      object-fit: contain;
+    }
   }
 
   &-text{
@@ -136,8 +143,11 @@
     }
 
     &-logo{
-      width: 70px;
-      height: 70px;
+
+      img{
+        width: 60px;
+        height: 60px;
+      }
       top: -40px;
     }
   }
