--- a/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
+++ b/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
@@ -78,6 +78,13 @@
   &-buy-unavailable{
     background-color: $light-gray;
     color: $gray;
+
+    &:hover:before{
+      @include absolute-position(top -10px, right 0);
+      content: 'Your order isn\'t here';
+      font-size: 12px;
+      color: red;
+    }
   }
 }
 
@@ -98,7 +105,7 @@
       font-size: 20px;
     }
 
-    &-buy{
+    &-buy, &-buy-unavailable{
       &:hover:before{
         font-size: 10px;
         bottom: 40px;
