--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -58,10 +58,8 @@ a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Oswald";
-    font-size : inherit;
-    font-weight: 400;
+p{
+    line-height: 1.5;
 }
 
 #root {
