--- a/client/src/admin/AdminMessages/AdminChat/AdminChat.scss
+++ b/client/src/admin/AdminMessages/AdminChat/AdminChat.scss
@@ -64,6 +64,7 @@
     @include flex-align(flex-end, space-between);
     width: 80%;
     gap: 20px;
+    padding-top: 20px;
 
     textarea{
       border: 1px solid $light-gray;
@@ -82,5 +83,6 @@
     font-size: 24px;
     font-weight: 600;
     border-radius: 15px;
+    cursor: pointer;
   }
 }
