--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -32,6 +32,14 @@
     margin-bottom: 10px;
   }
 
+  &-text{
+    font-size: 18px;
+    font-weight: 600;
+    color: $gray;
+    margin-top: 100px;
+    text-align: center;
+  }
+
   &-messages{
     @include column-direction;
     gap: 10px;
