--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -93,3 +93,22 @@
     cursor: pointer;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .chat{
+    right: 30px;
+    bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .chat{
+    width: 100%;
+    height: 100%;
+    right: 0;
+    bottom: 0;
+    z-index: 1500;
+    border-radius: 0;
+    border: none;
+  }
+}
