--- a/client/src/pages/OrderHistory/OrderHistory.scss
+++ b/client/src/pages/OrderHistory/OrderHistory.scss
@@ -22,6 +22,13 @@
     @include column-direction;
     gap: 30px;
   }
+
+  &-text{
+    color: $gray;
+    font-size: 24px;
+    text-align: center;
+    margin: 200px 0
+  }
 }
 
 @media screen and (max-width: 576px){
