--- a/client/src/components/AuthModal/AuthModal.scss
+++ b/client/src/components/AuthModal/AuthModal.scss
@@ -1,6 +1,6 @@
 .auth-modal {
   max-width: 400px;
-  width: 90%;
+  width: 100%;
   height: 500px;
   background-color: white;
   margin: 0 auto;
@@ -64,9 +64,13 @@
 }
 
 @media screen and (max-width: 576px){
-  .authModal{
-    &-header {
+  .auth-modal{
+    height: 100%;
+    max-width: none;
+    border-radius: 0;
+    padding-bottom: 60px;
 
+    &-header {
       &-title {
         font-size: 23px;
       }
