--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -95,3 +95,13 @@
     }
   }
 }
+
+@media screen and (max-width: 576px){
+  .cart{
+    padding-bottom: 60px;
+
+    &-wrapper{
+      max-width: none;
+    }
+  }
+}
