--- a/client/src/components/LocationPopUp/LocationPopUp.scss
+++ b/client/src/components/LocationPopUp/LocationPopUp.scss
@@ -1,6 +1,6 @@
 .locationPopUp{
   max-width: 1000px;
-  width: 90%;
+  width: 100%;
   height: 520px;
   background-color: white;
   margin: 0 auto;
@@ -186,6 +186,27 @@
 
       #map{
         height: 300px !important;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px){
+  .locationPopUp{
+    height: 100%;
+    border-radius: 0;
+
+    &-location{
+      gap: 20px;
+    }
+
+    &-main{
+      gap: 25px;
+    }
+
+    &-map{
+      #map{
+        height: 270px !important;
       }
     }
   }
