--- a/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
+++ b/client/src/pages/RestaurantPage/FoodCard/FoodCard.scss
@@ -17,12 +17,30 @@
   }
 
   &-image {
+    @include flex-align(center, center, column);
     min-width: 100px;
     min-height: 100px;
     height: 100px;
-    background-color: #6566AC;
-    border: 1px solid $light-gray;
+    border: 0.5px solid $light-gray;
     border-radius: 10px;
+    padding: 5px;
+    gap: 5px;
+    opacity: 0.5;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+
+    img{
+      object-fit: contain;
+      width: 70%;
+      height: 70%;
+      margin: auto;
+    }
+
+    p{
+      font-weight: 600;
+      line-height: 0.7;
+      text-align: center;
+      color: $dark-green;
+    }
   }
 
   &-details {
