--- a/client/src/admin/AdminHeader/AdminHeader.scss
+++ b/client/src/admin/AdminHeader/AdminHeader.scss
@@ -7,6 +7,11 @@
   padding: 25px 60px;
   background-color: white;
   z-index: 10;
+  gap: 25px;
+
+  &-burgermenu{
+    display: none;
+  }
 
   &-logo{
     font-size: 32px;
@@ -25,5 +30,69 @@
 
   &-user{
     font-size: 26px;
+  }
+}
+
+@media screen and (max-width: 1280px){
+  .admin-header{
+    padding: 25px 40px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .admin-header{
+    @include flex-align(center, center);
+    padding: 25px 32px;
+    position: relative;
+
+    &-burgermenu{
+      @include absolute-position(top 50%, left 32px);
+      @include flex-align(center);
+      transform: translateY(-50%);
+      width: 30px;
+      height: 20px;
+      cursor: pointer;
+
+      span, &::before, &::after{
+        display: block;
+        width: 100%;
+        height: 2px;
+        background-color: $dark-brown;
+      }
+
+      &::before{
+        content: '';
+        @include absolute-position(top 0, left 0);
+      }
+
+      &::after{
+        content: '';
+        @include absolute-position(bottom 0, left 0);
+      }
+    }
+
+    &-title, &-user{
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 576px){
+  .admin-header{
+    padding: 25px 16px;
+
+    &-burgermenu{
+      @include absolute-position(top 50%, left 16px);
+    }
+
+    &-logo{
+      font-size: 28px;
+      margin-left: 20px;
+
+      span{
+        font-size: 14px;
+        margin-left: -8px;
+      }
+    }
   }
 }
