--- a/client/src/admin/AdminHeader/AdminHeader.scss
+++ b/client/src/admin/AdminHeader/AdminHeader.scss
@@ -1,5 +1,4 @@
 .admin-header{
-  @include flex-align(center, space-between);
   position: fixed;
   top: 0;
   left: 0;
@@ -7,7 +6,12 @@
   padding: 25px 60px;
   background-color: white;
   z-index: 10;
-  gap: 25px;
+
+  &-container{
+    @include flex-align(center, space-between);
+    width: 100%;
+    gap: 25px;
+  }
 
   &-burgermenu{
     display: none;
@@ -41,9 +45,12 @@
 
 @media screen and (max-width: 768px){
   .admin-header{
-    @include flex-align(center, center);
     padding: 25px 32px;
-    position: relative;
+
+    &-container{
+      @include flex-align(center, center);
+      position: relative;
+    }
 
     &-burgermenu{
       @include absolute-position(top 50%, left 32px);
