--- a/client/src/admin/AdminLayout/AdminLayout.scss
+++ b/client/src/admin/AdminLayout/AdminLayout.scss
@@ -2,12 +2,12 @@
 
   &-wrapper{
     width: 100vw;
-    height: auto;
+    height: 100vh;
     background-color: rgba(109, 151, 115, 0.15);
   }
 
   &-main{
-    margin: 120px 60px 50px 360px;
+    margin: 120px 60px 70px 360px;
     width: calc(100% - 420px);
     height: auto;
     border-radius: 15px;
@@ -20,7 +20,7 @@
 @media screen and (max-width: 1280px){
   .admin-layout{
     &-main{
-      margin: 120px 40px 50px 280px;
+      margin: 120px 40px 70px 280px;
       width: calc(100% - 320px);
       padding: 20px;
     }
@@ -32,12 +32,13 @@
 
     &-wrapper{
       height: 100vh;
+      overflow: scroll;
     }
 
     &-main{
       height: auto;
       width: calc(100% - 64px);
-      margin: 40px auto;
+      margin: 120px auto 70px auto;
       padding: 15px;
     }
   }
@@ -47,7 +48,7 @@
   .admin-layout{
     &-main{
       width: calc(100% - 32px);
-      margin: 20px auto 40px auto;
+      margin: 92px auto 70px auto;
       padding: 10px;
     }
   }
