--- a/client/src/pages/RestaurantPage/Card/Card.scss
+++ b/client/src/pages/RestaurantPage/Card/Card.scss
@@ -7,6 +7,11 @@
     border-radius: 10px;
     height: 250px;
     box-shadow: rgba(99, 99, 99, 0.2) 0 2px 8px 0;
+
+    p{
+      line-height: 1.2;
+      text-align: justify;
+    }
   }
 
   &-name{
