--- a/client/src/admin/AdminLayout/AdminLayout.scss
+++ b/client/src/admin/AdminLayout/AdminLayout.scss
@@ -14,6 +14,7 @@
     background-color: white;
     padding: 25px;
     overflow: hidden;
+    box-shadow: rgba(99, 99, 99, 0.2) 0 2px 8px 0;
   }
 }
 
@@ -32,7 +33,7 @@
 
     &-wrapper{
       height: 100vh;
-      overflow: scroll;
+      overflow: auto;
     }
 
     &-main{
