--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -78,6 +78,7 @@
       resize: none;
       border-radius: 10px;
       box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+      font-size: 16px;
     }
   }
 
